tests/ui/traits/trait-upcasting/cyclic-trait-resolution.stderr
error[E0391]: cycle detected when computing the super predicates of `A`
  --> $DIR/cyclic-trait-resolution.rs:1:14
   |
LL | trait A: B + A {}
   |              ^
   |
   = note: ...which immediately requires computing the super predicates of `A` again
note: cycle used when collecting item types in top-level module
  --> $DIR/cyclic-trait-resolution.rs:1:1
   |
LL | trait A: B + A {}
   | ^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
